Remove pagenumber from final task

--- a/zavrsni.tex
+++ b/zavrsni.tex
@@ -12,7 +12,7 @@
 
 \maketitle
 
-\includepdf[pages=-,pagecommand={},width=\paperwidth]{final_task.pdf}
+\includepdf[pages=-,width=\paperwidth]{final_task.pdf}
 
 % Dodavanje zahvale ili prazne stranice. Ako ne želite dodati zahvalu, naredbu ostavite radi prazne stranice.
 \zahvala{}
